# mlb-api

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
mlb-api-proc/: Cargo.toml  README.md
mlb-api-proc/src/: enum_try.rs  enums.rs  filtered.rs  lib.rs  stats.rs
proc/: Cargo.toml
proc/src/: lib.rs  util.rs
proc/src/attributes/: mod.rs  parse.rs  request.rs  try_from.rs
src/: cache.rs  hydrations.rs  ids.rs  lib.rs  types.rs
src/endpoints/: links.rs  mod.rs  types.rs
src/endpoints/attendance/: mod.rs
src/endpoints/awards/: mod.rs
src/endpoints/conferences/: mod.rs
src/endpoints/divisions/: mod.rs
src/endpoints/draft/: mod.rs
src/endpoints/game/: mod.rs
src/endpoints/game/color/: mod.rs
src/endpoints/jobs/: mod.rs
src/endpoints/jobs/datacasters/: mod.rs
src/endpoints/jobs/official_scorers/: mod.rs
src/endpoints/jobs/umpire/: mod.rs
src/endpoints/league/: mod.rs  types.rs
src/endpoints/league/all_star_write_ins/: mod.rs
src/endpoints/meta/: mod.rs
src/endpoints/meta/kinds/: awards.rs  baseball_stats.rs  event_types.rs  game_status.rs  game_types.rs  hit_trajectories.rs  job_types.rs  languages.rs  league_leader_types.rs  logical_events.rs  metrics.rs  mod.rs  pitch_codes.rs  pitch_types.rs  platforms.rs  positions.rs  review_reasons.rs  roster_types.rs  schedule_event_types.rs  situation_codes.rs  sky.rs  standings_types.rs  stat_groups.rs  stat_types.rs  wind_direction.rs
src/endpoints/people/: mod.rs
src/endpoints/people/free_agents/: mod.rs
src/endpoints/person/: mod.rs  types.rs
src/endpoints/person/stats/: mod.rs
src/endpoints/schedule/: mod.rs  tied.rs
src/endpoints/schedule/postseason/: mod.rs  series.rs
src/endpoints/seasons/: mod.rs  types.rs
src/endpoints/seasons/season/: mod.rs  types.rs
src/endpoints/sports/: mod.rs  types.rs
src/endpoints/sports/players/: mod.rs  types.rs
src/endpoints/stats/: fielding.rs  mod.rs  piece_impls.rs  pitching.rs
src/endpoints/stats/leaders/: mod.rs
src/endpoints/teams/: mod.rs  types.rs
src/endpoints/teams/affiliates/: mod.rs
src/endpoints/teams/history/: mod.rs
src/endpoints/teams/team/: mod.rs  types.rs
src/endpoints/teams/team/alumni/: mod.rs
src/endpoints/teams/team/coaches/: mod.rs
src/endpoints/teams/team/leaders/: mod.rs
src/endpoints/teams/team/roster/: mod.rs
src/endpoints/transactions/: mod.rs
src/endpoints/venue/: mod.rs  types.rs
src/request/: mod.rs  reqwest.rs  ureq.rs
src/requests/: attendance.rs  awards.rs  conference.rs  conferences.rs  device_properties.rs  division.rs  divisions.rs  draft.rs  home_run_derby.rs  league.rs  links.rs  mod.rs  season.rs  sport.rs  sports.rs  standings.rs  transactions.rs  venue.rs
src/requests/all_star/: mod.rs
src/requests/attendance/: mod.rs
src/requests/awards/: mod.rs
src/requests/conferences/: mod.rs
src/requests/divisions/: mod.rs
src/requests/draft/: mod.rs
src/requests/game/: boxscore.rs  linescore.rs  live_feed.rs  mod.rs  pace.rs  plays.rs  timestamps.rs
src/requests/jobs/: datacasters.rs  mod.rs  official_scorers.rs  umpire.rs
src/requests/jobs/datacasters/: mod.rs
src/requests/jobs/official_scorers/: mod.rs
src/requests/league/: mod.rs
src/requests/meta/: baseball_stats.rs  event_types.rs  game_status.rs  game_types.rs  hit_trajectories.rs  job_types.rs  languages.rs  league_leader_types.rs  logical_events.rs  metrics.rs  mod.rs  pitch_codes.rs  pitch_types.rs  platforms.rs  positions.rs  review_reasons.rs  roster_types.rs  schedule_event_types.rs  situation_codes.rs  situations.rs  sky.rs  standings_types.rs  stat_groups.rs  stat_types.rs  wind_direction.rs
src/requests/meta/kinds/: baseball_stats.rs  event_types.rs  game_status.rs  game_types.rs  hit_trajectories.rs  job_types.rs  languages.rs  league_leader_types.rs  logical_events.rs  metrics.rs  mod.rs  pitch_codes.rs  pitch_types.rs  platforms.rs  positions.rs  review_reasons.rs  roster_types.rs  schedule_event_types.rs  situation_codes.rs  sky.rs  standings_types.rs  stat_groups.rs  stat_types.rs  wind_direction.rs
src/requests/people/: mod.rs
src/requests/people/free_agents/: mod.rs
src/requests/person/: free_agents.rs  mod.rs  people.rs  players.rs  stats.rs
src/requests/schedule/: mod.rs  tied.rs
src/requests/schedule/postseason/: mod.rs  series.rs
src/requests/season/: mod.rs  seasons.rs
src/requests/seasons/: mod.rs  season.rs
src/requests/sports/: mod.rs
src/requests/sports/players/: mod.rs
src/requests/stats/: catching.rs  derived.rs  fielding.rs  hitting.rs  leaders.rs  macros.rs  mod.rs  parse.rs  piece_impls.rs  pieces.rs  pitching.rs  tests.rs  units.rs
src/requests/stats/groups/: catching.rs  hitting.rs  mod.rs  pitching.rs
src/requests/stats/leaders/: mod.rs
src/requests/stats/raw/: catching.rs  fielded_matchup.rs  fielding.rs  hit_spray.rs  hitting.rs  hot_cold_zones.rs  mod.rs  pitch_usage.rs  pitching.rs  plays.rs  spray_chart.rs
src/requests/stats/wrappers/: accumulated_matchup.rs  accumulated_vs_player_matchup.rs  accumulated_vs_team.rs  accumulated_vs_team_seasonal.rs  career.rs  game.rs  home_away.rs  map.rs  mod.rs  month.rs  player.rs  player_and_team.rs  position_and_season.rs  season.rs  single_matchup.rs  team.rs  weekday.rs  win_loss.rs  with_none.rs
src/requests/team/: affiliates.rs  alumni.rs  coaches.rs  history.rs  leaders.rs  mod.rs  personnel.rs  roster.rs  stats.rs  teams.rs  uniforms.rs
src/requests/teams/: affiliates.rs  history.rs  mod.rs
src/requests/teams/affiliates/: mod.rs
src/requests/teams/history/: mod.rs
src/requests/teams/team/: alumni.rs  coaches.rs  leaders.rs  mod.rs  personnel.rs  roster.rs  stats.rs  uniforms.rs
src/requests/transactions/: mod.rs
src/requests/venue/: mod.rs
(+9 files in other folders)
