[package]
name = "mlb-api"
version = "0.0.13"
authors = ["Riley"]
edition = "2024"
description = "Endpoints for MLB's public Statcast API."
documentation = "https://docs.rs/mlb-api"
readme = "README.md"
repository = "https://github.com/RealRTTV/mlb-api"
license = "MIT"
keywords = ["mlb", "statcast", "api"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_with = "3.16.1"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "display", "from", "from_str", "add", "add_assign", "as_ref", "try_from"] }
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.12"
uom = { version = "0.37.0", features = ["serde", "use_serde", "i32"] }
serde_json = "1.0.140"
itertools = "0.14.0"
fxhash = "0.2.1"
compact_str = "0.9.0"
pastey = "0.2.1"
uuid = { version = "1.18.1", features = ["serde"] }
bon = "3.8.1"
either = "1.15.0"
smallvec = { version = "2.0.0-alpha.12", features = ["serde"] }

[dependencies.tokio]
version = "1.46.1"
features = ["sync"]
optional = true

[dependencies.parking_lot]
version = "0.12.4"
optional = true

[dev-dependencies]
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
serde_path_to_error = "0.1.17"

[dependencies.ureq]
version = "3.0.12"
features = ["json"]
optional = true

[dependencies.reqwest]
version = "0.12.21"
features = ["json"]
optional = true

[features]
default = ["reqwest", "cache", "aggressive_cache"]
cache = []
aggressive_cache = ["cache"]
_heavy_tests = []

reqwest = ["dep:reqwest", "dep:tokio"]
ureq = ["dep:ureq", "dep:parking_lot"]
