[package]
name = "mlb-api"
version = "0.1.3"
authors = ["Riley"]
edition = "2024"
description = "Endpoints for MLB's public Statcast API."
documentation = "https://docs.rs/mlb-api"
readme = "README.md"
repository = "https://github.com/RealRTTV/mlb-api"
license = "MIT"
keywords = ["mlb", "statcast", "api"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_with = "3.18.0"
derive_more = { version = "2.1.1", features = ["deref", "deref_mut", "display", "from", "from_str", "add", "add_assign", "as_ref", "try_from", "into", "not"] }
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
uom = { version = "0.38.0", features = ["serde", "use_serde", "i32"] }
serde_json = "1.0.149"
itertools = "0.14.0"
fxhash = "0.2.1"
chrono-tz = { version = "0.10.4", features = ["serde"] }
pastey = "0.2.1"
uuid = { version = "1.23.0", features = ["serde"] }
bon = "3.9.1"
either = "1.15.0"
smallvec = { version = "2.0.0-alpha.12", features = ["serde"] }
# ureq = { version = "3.30", features = ["json"] } # cancelled blocking
# parking_lot = "0.12.5" # cancelled blocking
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.50.0", features = ["sync"] }

[dependencies.serde_path_to_error]
version = "0.1.20"
optional = true

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["cache", "aggressive_cache"]
cache = []
aggressive_cache = ["cache"]
_heavy_tests = []
_debug = ["dep:serde_path_to_error"]
