[package]
name = "mlb-api-proc"
version = "0.1.2"
authors = ["Riley"]
edition = "2024"
description = "A private crate meant for internal use by mlb-api only."
documentation = "https://docs.rs/mlb-api-proc"
readme = "README.md"
repository = "https://github.com/RealRTTV/mlb-api"
license = "MIT"
keywords = []
categories = []

[lib]
proc-macro = true

[dependencies]
itertools = "0.14.0"
syn = { version = "2.0.106", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.101"
derive-syn-parse = "0.2.0"
anyhow = "1.0.100"
