[package]
name = "mlb-api-proc"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"
ureq = { version = "3.0.12", features = ["json"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
indexmap = "2.10.0"
